# icsnpp-iec61850-goose-alldata

./: CMakeLists.txt  README.md
.github/workflows/: label.yml  project.yml  zeek-build.yaml
analyzer/: goose.spicy
scripts/: __load__.zeek  detection.zeek  main.zeek
scripts/tests/: CMakeLists.txt  goose-allData.btest
spicy/: CMakeLists.txt  goose.spicy
